# routes/api.php
@@ -5,19 +5,12 @@ use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\YoutubeDownloadController;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider and all of them will
-| be assigned to the "api" middleware group. Make something great!
-|
-*/
+use App\Http\Controllers\AuthController;
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+Route::post('/register', [AuthController::class, 'register']);
+Route::post('/login', [AuthController::class, 'login']);
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/download', [YoutubeDownloadController::class, 'download']);
+    Route::post('/logout', [AuthController::class, 'logout']);
 });
-Route::get('/download', [YoutubeDownloadController::class, 'download']);
-
